--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -8,10 +8,29 @@
         Title="MainWindow" Height="450" Width="800">
     <Grid x:Name="MainGrid" Background="LightGray">
         <TextBox x:Name="txtBox1" AcceptsReturn="true" AcceptsTab="true" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Center" Width="598" Height="296"/>
-        <Button x:Name="saveBtn" Content="Save file" HorizontalAlignment="Center" Margin="0,390,0,0" VerticalAlignment="Top" Width="66" Background="Transparent" BorderBrush="Transparent" FontFamily="Bahnschrift" FontWeight="Bold" Click="saveBtn_Click" />
-        <Button x:Name="clearBtn" Content="Clear Text" HorizontalAlignment="Left" Margin="477,390,0,0" VerticalAlignment="Top" Width="66" Background="Transparent" BorderBrush="Transparent" FontFamily="Bahnschrift" FontWeight="Bold" Click="clearBtn_Click" />
+        <Button x:Name="saveBtn" Content="Save file" HorizontalAlignment="Left" Margin="319,388,0,0" VerticalAlignment="Top" Width="66" Background="#FFB1B1B1" BorderBrush="Transparent" FontFamily="Bahnschrift" FontWeight="Bold" Click="saveBtn_Click" />
+        <Button x:Name="clearBtn" Content="Clear Text" HorizontalAlignment="Left" Margin="429,388,0,0" VerticalAlignment="Top" Width="66" Background="#FFB1B1B1" BorderBrush="Transparent" FontFamily="Bahnschrift" FontWeight="Bold" Click="clearBtn_Click" RenderTransformOrigin="0.5,0.5" >
+            <Button.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0.657"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Button.RenderTransform>
+        </Button>
         <Ellipse HorizontalAlignment="Left" Height="22" Margin="655,79,0,0" Stroke="AliceBlue" VerticalAlignment="Top" Width="22" Fill="AliceBlue"/>
         <Button x:Name="colorBtn" Content="." HorizontalAlignment="Left" Margin="648,79,0,0" VerticalAlignment="Top" Height="28" Width="36" Background="{x:Null}" BorderBrush="{x:Null}" Click="colorBtn_Click_1"/>
+        <Button x:Name="ReadBtn" Content="Read a file" HorizontalAlignment="Left" Margin="536,388,0,0" VerticalAlignment="Top" Width="66" Background="#FFB1B1B1" BorderBrush="Transparent" FontFamily="Bahnschrift" FontWeight="Bold" RenderTransformOrigin="0.5,0.5" Click="ReadBtn_Click" >
+            <Button.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0.657"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Button.RenderTransform>
+        </Button>
 
     </Grid>
 </Window>
