--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -8,8 +8,8 @@
         Title="MainWindow" Height="450" Width="800">
     <Grid x:Name="MainGrid" Background="LightGray">
         <TextBox x:Name="txtBox1" AcceptsReturn="true" AcceptsTab="true" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Center" Width="598" Height="296"/>
-        <Button x:Name="saveBtn" Content="Save file" HorizontalAlignment="Left" Margin="319,388,0,0" VerticalAlignment="Top" Width="66" Background="#FFB1B1B1" BorderBrush="Transparent" FontFamily="Bahnschrift" FontWeight="Bold" Click="saveBtn_Click" />
-        <Button x:Name="clearBtn" Content="Clear Text" HorizontalAlignment="Left" Margin="429,388,0,0" VerticalAlignment="Top" Width="66" Background="#FFB1B1B1" BorderBrush="Transparent" FontFamily="Bahnschrift" FontWeight="Bold" Click="clearBtn_Click" RenderTransformOrigin="0.5,0.5" >
+        <Button x:Name="saveBtn" Content="Save file" HorizontalAlignment="Left" Margin="255,393,0,0" VerticalAlignment="Top" Width="66" Background="#FFB1B1B1" BorderBrush="Transparent" FontFamily="Bahnschrift" FontWeight="Bold" Click="saveBtn_Click" />
+        <Button x:Name="clearBtn" Content="Clear Text" HorizontalAlignment="Left" Margin="365,393,0,0" VerticalAlignment="Bottom" Width="66" Background="#FFB1B1B1" BorderBrush="Transparent" FontFamily="Bahnschrift" FontWeight="Bold" Click="clearBtn_Click" RenderTransformOrigin="0.5,0.5" >
             <Button.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -20,8 +20,8 @@
             </Button.RenderTransform>
         </Button>
         <Ellipse HorizontalAlignment="Left" Height="22" Margin="655,79,0,0" Stroke="AliceBlue" VerticalAlignment="Top" Width="22" Fill="AliceBlue"/>
-        <Button x:Name="colorBtn" Content="." HorizontalAlignment="Left" Margin="648,79,0,0" VerticalAlignment="Top" Height="28" Width="36" Background="{x:Null}" BorderBrush="{x:Null}" Click="colorBtn_Click_1"/>
-        <Button x:Name="ReadBtn" Content="Read a file" HorizontalAlignment="Left" Margin="536,388,0,0" VerticalAlignment="Top" Width="66" Background="#FFB1B1B1" BorderBrush="Transparent" FontFamily="Bahnschrift" FontWeight="Bold" RenderTransformOrigin="0.5,0.5" Click="ReadBtn_Click" >
+        <Button x:Name="LtModeBtn" Content="." HorizontalAlignment="Left" Margin="648,76,0,0" VerticalAlignment="Top" Height="28" Width="36" Background="{x:Null}" BorderBrush="{x:Null}" Click="colorBtn_Click"/>
+        <Button x:Name="ReadBtn" Content="Read a file" HorizontalAlignment="Left" Margin="472,393,0,0" VerticalAlignment="Top" Width="66" Background="#FFB1B1B1" BorderBrush="Transparent" FontFamily="Bahnschrift" FontWeight="Bold" RenderTransformOrigin="0.5,0.5" Click="ReadBtn_Click" >
             <Button.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -31,6 +31,8 @@
                 </TransformGroup>
             </Button.RenderTransform>
         </Button>
+        <Ellipse HorizontalAlignment="Left" Height="22" Margin="618,79,0,0" Stroke="White" VerticalAlignment="Top" Width="22" Fill="#FFCCCCCC"/>
+        <Button x:Name="DkModeBtn" Content="" HorizontalAlignment="Left" Margin="614,79,0,0" VerticalAlignment="Top" BorderBrush="White" Background="{x:Null}" Width="30" Height="22" Click="DkModeBtn_Click"/>
 
     </Grid>
 </Window>
