--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -20,7 +20,7 @@
             </Button.RenderTransform>
         </Button>
         <Ellipse HorizontalAlignment="Left" Height="22" Margin="655,79,0,0" Stroke="AliceBlue" VerticalAlignment="Top" Width="22" Fill="AliceBlue"/>
-        <Button x:Name="LtModeBtn" Content="." HorizontalAlignment="Left" Margin="648,76,0,0" VerticalAlignment="Top" Height="28" Width="36" Background="{x:Null}" BorderBrush="{x:Null}" Click="colorBtn_Click"/>
+        <Button x:Name="LtModeBtn" Content="." HorizontalAlignment="Left" Margin="648,76,0,0" VerticalAlignment="Top" Height="28" Width="36" Background="{x:Null}" BorderBrush="{x:Null}" Click="LtModeBtn_Click"/>
         <Button x:Name="ReadBtn" Content="Read a file" HorizontalAlignment="Left" Margin="472,393,0,0" VerticalAlignment="Top" Width="66" Background="#FFB1B1B1" BorderBrush="Transparent" FontFamily="Bahnschrift" FontWeight="Bold" RenderTransformOrigin="0.5,0.5" Click="ReadBtn_Click" >
             <Button.RenderTransform>
                 <TransformGroup>
