--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -10,39 +10,53 @@
 
     <Grid x:Name="MainGrid" Background="White">
 
-        <TextBox x:Name="txtBox1" Text="{Binding currentDate}" Visibility="Hidden" AcceptsReturn="true" AcceptsTab="true" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Center" Width="598" Height="296"/>
-        <Button x:Name="saveBtn" Visibility="Hidden" Content="Save file" HorizontalAlignment="Left" Margin="255,383,0,0" VerticalAlignment="Top" Width="66" Background="Transparent" BorderBrush="Black" FontFamily="Bahnschrift" FontWeight="Bold" Click="saveBtn_Click" />
+        <TextBox x:Name="txtBox1" Text="{Binding currentDate}" Visibility="Hidden" AcceptsReturn="true" AcceptsTab="true" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Width="484" Height="296" Margin="46,59,0,0"/>
+        <Button x:Name="saveBtn" Visibility="Hidden" Content="Save file" HorizontalAlignment="Left" Margin="172,370,0,0" VerticalAlignment="Top" Width="88" Background="White" BorderBrush="Black" FontFamily="Bahnschrift" FontWeight="Bold" Click="saveBtn_Click" Height="38" />
         <Button x:Name="CreateNoteBtn" FontFamily="Bahnschrift" Content="Create a note" Background="White" BorderBrush="Black"  HorizontalAlignment="Left" Margin="288,0,0,0" VerticalAlignment="Center" Click="CreateNoteBtn_Click" Height="76" Width="168"/>
 
-        <Button x:Name="clearBtn" Content="Clear Text" Visibility="Hidden" HorizontalAlignment="Left" Margin="365,383,0,0" VerticalAlignment="Top" Width="66" Background="Transparent" BorderBrush="Black" FontFamily="Bahnschrift" FontWeight="Bold" Click="clearBtn_Click" RenderTransformOrigin="0.5,0.5" >
+        <Button x:Name="clearBtn" Content="Clear Text" Visibility="Hidden" HorizontalAlignment="Left" Margin="320,369,0,0" VerticalAlignment="Top" Width="88" Background="White" BorderBrush="Black" FontFamily="Bahnschrift" FontWeight="Bold" Click="clearBtn_Click" RenderTransformOrigin="0.5,0.5" Height="38" >
 
 
             <Button.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
                     <SkewTransform/>
-                    <RotateTransform Angle="0.657"/>
+                    <RotateTransform Angle="-0.135"/>
                     <TranslateTransform/>
                 </TransformGroup>
 
             </Button.RenderTransform>
 
         </Button>
-        <Button x:Name="ReadBtn" Content="Read a file" Visibility="Hidden" HorizontalAlignment="Left" Margin="472,383,0,0" VerticalAlignment="Top" Width="66" Background="Transparent" BorderBrush="Black" FontFamily="Bahnschrift" FontWeight="Bold" RenderTransformOrigin="0.5,0.5" Click="ReadBtn_Click">
+        <Button x:Name="ReadBtn" Content="Read a file" Visibility="Hidden" HorizontalAlignment="Left" Margin="626,167,0,0" VerticalAlignment="Top" Width="68" Background="White" BorderBrush="Black" FontFamily="Bahnschrift" FontWeight="Bold" RenderTransformOrigin="0.5,0.5" Click="ReadBtn_Click" Height="20">
             <Button.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
                     <SkewTransform/>
-                    <RotateTransform Angle="0.657"/>
+                    <RotateTransform Angle="0.002"/>
                     <TranslateTransform/>
                 </TransformGroup>
             </Button.RenderTransform>
         </Button>
-        <Button x:Name="LightCoralBtn" Content="" HorizontalAlignment="Left" Margin="599,65,0,0" VerticalAlignment="Top" Width="29" Background="LightCoral" BorderBrush="LightCoral" Height="24" Click="LightCoralBtn_Click"/>
-        <Button x:Name="WheatBtn" Content="" HorizontalAlignment="Left" Margin="643,65,0,0" VerticalAlignment="Top" BorderBrush="Wheat" Background="Wheat" Width="29" Height="24" Click="WheatBtn_Click"/>
-        <Button x:Name="WhiteBtn" Content="" HorizontalAlignment="Left" Margin="553,65,0,0" VerticalAlignment="Top" Width="29" Background="White" BorderBrush="Black" Height="24" Click="WhiteBtn_Click"/>
-        <TextBox x:Name="ReadBox" Visibility="Hidden" HorizontalAlignment="Left" Margin="553,255,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <ComboBox x:Name="ReadComboBox" HorizontalAlignment="Left" Margin="552,282,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="ReadComboBox_SelectionChanged" Background="{x:Null}"/>
+        <Button x:Name="LightCoralBtn" Content="" HorizontalAlignment="Left" Margin="689,20,0,0" VerticalAlignment="Top" Width="29" Background="LightCoral" BorderBrush="LightCoral" Height="24" Click="LightCoralBtn_Click"/>
+        <Button x:Name="WheatBtn" Content="" HorizontalAlignment="Left" Margin="733,20,0,0" VerticalAlignment="Top" BorderBrush="Wheat" Background="Wheat" Width="29" Height="24" Click="WheatBtn_Click"/>
+        <Button x:Name="WhiteBtn" Content="" HorizontalAlignment="Left" Margin="643,20,0,0" VerticalAlignment="Top" Width="29" Background="White" BorderBrush="Black" Height="24" Click="WhiteBtn_Click"/>
+        <TextBox x:Name="ReadBox" Visibility="Hidden" HorizontalAlignment="Left" Margin="628,139,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Label x:Name="readFileLabel" Visibility="Hidden" Content="Enter file to read:" HorizontalAlignment="Left" Margin="623,114,0,0" VerticalAlignment="Top" Width="113" Height="25"/>
+        <Button x:Name="DeleteFileBtn" Visibility="Hidden" Content="Delete a file" FontWeight="Bold" FontFamily="Bahnschrift" HorizontalAlignment="Left" Margin="627,257,0,0" VerticalAlignment="Top" Click="DeleteFileBtn_Click" Background="White" RenderTransformOrigin="0.5,0.5">
+            <Button.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0.194"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Button.RenderTransform>
+        </Button>
+        <TextBox x:Name="DeleteFileBox" Visibility="Hidden" HorizontalAlignment="Left" Margin="628,230,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Label x:Name="DeleteFileLabel" Visibility="Hidden" Content="Enter file to delete" HorizontalAlignment="Left" Margin="623,203,0,0" VerticalAlignment="Top" Width="120"/>
+        <Label x:Name="AppLabel" FontWeight="Bold" FontFamily="Bahnschrift" Content="Notes" HorizontalAlignment="Left" Margin="35,10,0,0" VerticalAlignment="Top" Height="39" Width="84" FontSize="26"/>
+        <Button x:Name="BlackBtn" Content="" HorizontalAlignment="Left" Margin="601,20,0,0" VerticalAlignment="Top" Width="29" Height="24" Background="#FF2F2F2F" Click="BlackBtn_Click"/>
 
 
 
