--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -5,10 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:NTApp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800"
+        Title="Notes" Height="450" Width="800"
         WindowStartupLocation="CenterScreen">
 
     <Grid x:Name="MainGrid" Background="White">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="391*"/>
+            <ColumnDefinition Width="9*"/>
+        </Grid.ColumnDefinitions>
 
         <TextBox x:Name="txtBox1" Text="{Binding currentDate}" Visibility="Hidden" AcceptsReturn="true" AcceptsTab="true" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Width="484" Height="296" Margin="46,59,0,0"/>
         <Button x:Name="saveBtn" Visibility="Hidden" Content="Save file" HorizontalAlignment="Left" Margin="172,370,0,0" VerticalAlignment="Top" Width="88" Background="White" BorderBrush="Black" FontFamily="Bahnschrift" FontWeight="Bold" Click="saveBtn_Click" Height="38" />
