--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -38,7 +38,7 @@
             </Button.RenderTransform>
 
         </Button>
-        <Button x:Name="ReadBtn" Content="Read a file" Visibility="Hidden" HorizontalAlignment="Left" Margin="626,167,0,0" VerticalAlignment="Top" Width="68" Background="White" BorderBrush="Black" FontFamily="Bahnschrift" FontWeight="Bold" RenderTransformOrigin="0.5,0.5" Click="ReadBtn_Click" Height="20">
+        <Button x:Name="ReadBtn" Content="Read file" Visibility="Hidden" HorizontalAlignment="Left" Margin="629,167,0,0" VerticalAlignment="Top" Width="68" Background="White" BorderBrush="Black" FontFamily="Bahnschrift" FontWeight="Bold" RenderTransformOrigin="0.5,0.5" Click="ReadBtn_Click" Height="20">
             <Button.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -52,7 +52,7 @@
         <Button x:Name="WhiteBtn" Content="" HorizontalAlignment="Left" Margin="692,20,0,0" VerticalAlignment="Top" Width="29" Background="White" BorderBrush="White" Height="24" Click="WhiteBtn_Click"/>
         <TextBox x:Name="ReadBox" Visibility="Hidden" HorizontalAlignment="Left" Margin="628,139,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <Label x:Name="readFileLabel" Foreground="White" Visibility="Hidden" Content="Enter file to read:" HorizontalAlignment="Left" Margin="623,114,0,0" VerticalAlignment="Top" Width="113" Height="25"/>
-        <Button x:Name="DeleteFileBtn" Visibility="Hidden" Content="Delete a file" FontWeight="Bold" FontFamily="Bahnschrift" HorizontalAlignment="Left" Margin="627,257,0,0" VerticalAlignment="Top" Click="DeleteFileBtn_Click" Background="White" RenderTransformOrigin="0.5,0.5">
+        <Button x:Name="DeleteFileBtn" Visibility="Hidden" Content="Delete file" FontWeight="Bold" FontFamily="Bahnschrift" HorizontalAlignment="Left" Margin="628,257,0,0" VerticalAlignment="Top" Click="DeleteFileBtn_Click" Background="White" RenderTransformOrigin="0.5,0.5" BorderBrush="Black" Width="63">
             <Button.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -80,6 +80,9 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
+        <Button x:Name="UpdateBtn" Content="Update file" Visibility="Hidden" HorizontalAlignment="Left" FontFamily="Bahnschrift" FontWeight="Bold" Margin="628,347,0,0" VerticalAlignment="Top" Click="UpdateBtn_Click" BorderBrush="Black" Background="White" Width="66"/>
+        <TextBox x:Name="UpdateBox" Visibility="Hidden" HorizontalAlignment="Left" Margin="628,318,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Label x:Name="UpdateFileLabel" Visibility="Hidden" Content="Enter file to Update" HorizontalAlignment="Left" Margin="624,292,0,0" VerticalAlignment="Top" Width="124" Foreground="White"/>
 
 
 
