--- a/App.xaml
+++ b/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="NTApp.App"
+﻿<Application x:Class="Notes.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:NTApp"
+             xmlns:local="clr-namespace:Notes"
              StartupUri="Views\MainWindow.xaml">
     <Application.Resources>
          
