--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -26,7 +26,7 @@
         <Label x:Name="FileNameLabel" Visibility="Hidden" Content="Name" HorizontalAlignment="Left" Margin="30,58,0,0" VerticalAlignment="Top" Foreground="White"/>
 
         
-        <TextBox x:Name="txtBox1" Text="{Binding currentDate}" Visibility="Hidden" AcceptsReturn="true" AcceptsTab="true" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Width="484" Height="296" Margin="35,114,0,0"/>
+        <TextBox x:Name="txtBox1" Text="{Binding CurrentDate}" Visibility="Hidden" AcceptsReturn="true" AcceptsTab="true" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Width="484" Height="296" Margin="35,114,0,0"/>
 
         <Button x:Name="saveBtn" Visibility="Hidden" Foreground="White" Content="Save file" HorizontalAlignment="Left" Margin="171,430,0,0" VerticalAlignment="Top" Width="88" Background="Transparent" BorderBrush="White" FontFamily="Bahnschrift" FontWeight="Bold" Click="saveBtn_Click" Height="38" />
 
