--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -30,13 +30,8 @@
         <Button x:Name="CreateNoteBtn" FontFamily="Bahnschrift" Content="Create a note" Background="Transparent" BorderBrush="White"  HorizontalAlignment="Left" Margin="288,0,0,0" VerticalAlignment="Center" Click="CreateNoteBtn_Click" Height="76" Width="168" Foreground="White"/>
         <Button x:Name="clearBtn" Content="Clear Text" Visibility="Hidden" HorizontalAlignment="Left" Margin="320,430,0,0" VerticalAlignment="Top" Width="88" Foreground="White" Background="Transparent" BorderBrush="White" FontFamily="Bahnschrift" FontWeight="Bold" Click="clearBtn_Click" RenderTransformOrigin="0.5,0.5" Height="38"/>
 
-        <Label x:Name="DeleteFileLabel" Foreground="White" Visibility="Hidden" Content="Enter file to delete" HorizontalAlignment="Left" Margin="622,99,0,0" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="DeleteFileBox" Visibility="Hidden" HorizontalAlignment="Left" Margin="628,126,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Button x:Name="DeleteFileBtn" Visibility="Hidden" Content="Delete file" FontWeight="Bold" FontFamily="Bahnschrift" HorizontalAlignment="Left" Margin="628,153,0,0" VerticalAlignment="Top" Click="DeleteFileBtn_Click" Foreground="White" Background="Transparent" RenderTransformOrigin="0.5,0.5" BorderBrush="White" Width="62"/>
-
-        <Label x:Name="UpdateFileLabel" Visibility="Hidden" Content="Enter file to Update" HorizontalAlignment="Left" Margin="620,181,0,0" VerticalAlignment="Top" Width="124" Foreground="White"/>
-        <TextBox x:Name="UpdateBox" Visibility="Hidden" HorizontalAlignment="Left" Margin="626,206,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Button x:Name="UpdateBtn" Content="Update file" Visibility="Hidden" HorizontalAlignment="Left" FontFamily="Bahnschrift" FontWeight="Bold" Margin="630,236,0,0" VerticalAlignment="Top" Click="UpdateBtn_Click" BorderBrush="White" Foreground="White" Background="Transparent" Width="66"/>
+        <Button x:Name="DeleteFileBtn" Visibility="Hidden" Content="Delete file" FontWeight="Bold" FontFamily="Bahnschrift" HorizontalAlignment="Left" Margin="628,120,0,0" VerticalAlignment="Top" Click="DeleteFileBtn_Click" Foreground="White" Background="Transparent" RenderTransformOrigin="0.5,0.5" BorderBrush="White" Width="107" Height="51"/>
+        <Button x:Name="UpdateBtn" Content="Update file" Visibility="Hidden" HorizontalAlignment="Left" FontFamily="Bahnschrift" FontWeight="Bold" Margin="628,210,0,0" VerticalAlignment="Top" Click="UpdateBtn_Click" BorderBrush="White" Foreground="White" Background="Transparent" Width="108" Height="51"/>
 
 
         <Button x:Name="WheatBtn" Content="" HorizontalAlignment="Left" Margin="668,42,0,0" VerticalAlignment="Top" BorderBrush="Wheat" Background="Wheat" Width="29" Height="24" Click="WheatBtn_Click" ClickMode="Hover">
@@ -84,6 +79,9 @@
 
         <Label x:Name="vLabel" Content="v.1.0.0" HorizontalAlignment="Left" Margin="715,455,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Bahnschrift"/>
         <Button x:Name="MainBackBtn" Visibility="Hidden" Content="Back" HorizontalAlignment="Left" Margin="30,460,0,0" VerticalAlignment="Top" Height="22" Width="35" Background="{x:Null}" Foreground="White" BorderBrush="White" FontFamily="Bahnschrift" Click="MainBackBtn_Click"/>
-        <ListBox x:Name="NamesBox" Visibility="Hidden" Margin="560,282,16,141" SelectionChanged="NamesBox_SelectionChanged"/>
+        <ListBox x:Name="NamesBox" Visibility="Hidden" ItemsSource="{Binding TxtFileNames}" Margin="560,282,16,141" SelectionChanged="NamesBox_SelectionChanged"/>
+        <Image x:Name="Circle2" HorizontalAlignment="Left" Height="200" Margin="545,104,0,0" VerticalAlignment="Top" Width="242" Source="https://circle.so/wp-content/uploads/Ellipse-261.png" OpacityMask="Black"/>
+        <Image x:Name="Circle1" HorizontalAlignment="Left" Height="280" Margin="-39,122,0,0" VerticalAlignment="Top" Width="326" Source="https://circle.so/wp-content/uploads/Ellipse-261.png" OpacityMask="#FFF9EDED" Opacity="0.4"/>
+        <Image x:Name="Circle3" HorizontalAlignment="Left" Height="58" Margin="461,430,0,0" VerticalAlignment="Top" Width="84" Source="https://circle.so/wp-content/uploads/Ellipse-261.png" OpacityMask="Black"/>
     </Grid>
 </Window>
